--- a/scss/index.css
+++ b/scss/index.css
@@ -8,6 +8,7 @@
   .header-list .header-item {
     width: 33.3%;
     text-align: center;
+    padding: .4rem 0;
     border-right: 1px solid #EDEDED; }
     .header-list .header-item:last-child {
       border-right: none; }
@@ -38,6 +39,7 @@
 
 .nav-list {
   position: fixed;
+  transition: all 1s;
   z-index: 3;
   left: 0;
   top: 0;
@@ -51,6 +53,7 @@
 
 .menu {
   position: fixed;
+  transition: all 1s;
   z-index: 2;
   top: 40%;
   left: 4rem;
@@ -68,10 +71,47 @@
     margin-top: -0.5rem; }
 
 .blur-bg {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.3);
-  z-index: 1; }
+  z-index: 1;
+  top: 0;
+  left: 0;
+  display: none; }
+
+.nav-btn {
+  position: fixed;
+  width: 5rem;
+  height: 5rem;
+  left: 2rem;
+  bottom: 2rem;
+  background-color: #141615;
+  border-radius: 50%; }
+  .nav-btn img {
+    width: 3rem;
+    height: 3rem;
+    margin: .4rem 0 0 1rem; }
+  .nav-btn p {
+    margin-left: 1.5rem;
+    margin-top: -0.2rem;
+    color: white; }
+
+.cart-btn {
+  position: fixed;
+  width: 5rem;
+  height: 5rem;
+  right: 2rem;
+  bottom: 2rem;
+  background-color: red;
+  border-radius: 50%; }
+  .cart-btn img {
+    width: 3rem;
+    height: 3rem;
+    margin: .4rem 0 0 1rem; }
+  .cart-btn p {
+    margin-left: 1.5rem;
+    margin-top: -0.2rem;
+    color: white; }
 
 /*# sourceMappingURL=index.css.map */
