--- a/scss/index.scss
+++ b/scss/index.scss
@@ -8,6 +8,7 @@
   .header-item {
     width: 33.3%;
     text-align: center;
+    padding: .4rem 0;
     border-right: 1px solid #EDEDED;
     &:last-child {
       border-right: none;
@@ -51,6 +52,7 @@
 
 .nav-list {
   position: fixed;
+  transition: all 1s;
   z-index: 3;
   left: 0;
   top: 0;
@@ -65,6 +67,7 @@
 }
 .menu {
   position: fixed;
+  transition: all 1s;
   z-index: 2;
   top: 40%;
   left: 4rem;
@@ -87,9 +90,50 @@
   }
 }
 .blur-bg {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   background-color: rgba(0,0,0,0.3);
   z-index: 1;
+  top: 0;
+  left: 0;
+  display: none;
+}
+.nav-btn {
+  position: fixed;
+  width: 5rem;
+  height: 5rem;
+  left: 2rem;
+  bottom: 2rem;
+  background-color: #141615;
+  border-radius: 50%;
+  img {
+    width: 3rem;
+    height: 3rem;
+    margin: .4rem 0 0 1rem;
+  }
+  p {
+    margin-left: 1.5rem;
+    margin-top: -0.2rem;
+    color: white;
+  }
+}
+.cart-btn {
+  position: fixed;
+  width: 5rem;
+  height: 5rem;
+  right: 2rem;
+  bottom: 2rem;
+  background-color: red;
+  border-radius: 50%;
+  img {
+    width: 3rem;
+    height: 3rem;
+    margin: .4rem 0 0 1rem;
+  }
+  p {
+    margin-left: 1.5rem;
+    margin-top: -0.2rem;
+    color: white;
+  }
 }
