--- a/scss/index.scss
+++ b/scss/index.scss
@@ -137,3 +137,52 @@
     color: white;
   }
 }
+.footer-nav-content {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.4);
+  li {
+    width: 5rem;
+    height: 5rem;
+    background-color: #141615;
+    border-radius: 50%;
+    position: absolute;
+
+    img {
+      width: 1.8rem;
+      height: 1.8rem;
+      margin: .8rem 0 0 1.5rem;
+    }
+    p {
+      margin-top: -.2rem;
+      color: white;
+      font-size: 1rem;
+      text-align: center;
+    }
+
+    &:nth-child(1) {
+      bottom: 30%;
+      left: 8%;
+    }
+
+    &:nth-child(2) {
+      bottom: 22%;
+      left: 25%;
+    }
+    &:nth-child(3) {
+      bottom: 13%;
+      left: 40%;
+    }
+    &:nth-child(4) {
+      bottom: 2%;
+      left: 45%;
+    }
+    &:nth-child(5) {
+      bottom: 2rem;
+      left: 2rem;
+    }
+  }
+}
