--- a/scss/index.css
+++ b/scss/index.css
@@ -114,4 +114,42 @@
     margin-top: -0.2rem;
     color: white; }
 
+.footer-nav-content {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4); }
+  .footer-nav-content li {
+    width: 5rem;
+    height: 5rem;
+    background-color: #141615;
+    border-radius: 50%;
+    position: absolute; }
+    .footer-nav-content li img {
+      width: 1.8rem;
+      height: 1.8rem;
+      margin: .8rem 0 0 1.5rem; }
+    .footer-nav-content li p {
+      margin-top: -.2rem;
+      color: white;
+      font-size: 1rem;
+      text-align: center; }
+    .footer-nav-content li:nth-child(1) {
+      bottom: 30%;
+      left: 8%; }
+    .footer-nav-content li:nth-child(2) {
+      bottom: 22%;
+      left: 25%; }
+    .footer-nav-content li:nth-child(3) {
+      bottom: 13%;
+      left: 40%; }
+    .footer-nav-content li:nth-child(4) {
+      bottom: 2%;
+      left: 45%; }
+    .footer-nav-content li:nth-child(5) {
+      bottom: 2rem;
+      left: 2rem; }
+
 /*# sourceMappingURL=index.css.map */
